@@ -19,8 +19,8 @@
  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
 
-#ifndef __TICABLES__
-#define __TICABLES__
+#ifndef __TICABLES_H__
+#define __TICABLES_H__
 
 #include "cabl_def.h"
 #include "cabl_int.h"
